--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.13",
     "crypto-js": "^4.2.0",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
@@ -19,18 +18,21 @@
     "react-router": "^7.9.1",
     "react-router-dom": "^7.9.1",
     "styled-components": "^6.1.19",
-    "swiper": "^12.0.1",
-    "tailwindcss": "^4.1.13"
+    "swiper": "^12.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@tailwindcss/vite": "^4.1.13",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
+    "@vitejs/plugin-react": "^5.0.2",
     "@vitejs/plugin-react-swc": "^4.0.0",
+    "daisyui": "^5.1.12",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "tailwindcss": "^4.1.13",
     "vite": "^7.1.2"
   }
 }
