--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-VITE_API_URL=http://10.0.0.42:81/
-VITE_USER_DATA_KEY=userData387438
-VITE_USER_ROLE=user
-VITE_ADMIN_ROLE=admin
-VITE_SUPERADMIN_ROLE=superadmin
+VITE_API_URL=http://10.0.0.43:8000/api/v1/
+VITE_SUPPORT_API=http://10.0.0.43:8000/api/v1/support
+VITE_WS_CHAT_PATH=/ws/chat
+VITE_WS_BASE=ws://10.0.0.43:8000
