--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "crypto-js": "^4.2.0",
     "formik": "^2.4.6",
     "lucide-react": "^0.544.0",
@@ -19,7 +20,8 @@
     "react-router": "^7.9.1",
     "react-router-dom": "^7.9.1",
     "styled-components": "^6.1.19",
-    "swiper": "^12.0.1"
+    "swiper": "^12.0.1",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
